# nautonomous_map_cropper

./: CMakeLists.txt  package.xml
config/: amsterdam.yaml  amsterdam_cropped.yaml  amsterdam_cropped_.yaml  amsterdam_cropped_100.yaml  amsterdam_cropped_101.yaml  amsterdam_cropped_102.yaml  amsterdam_cropped_103.yaml  amsterdam_cropped_104.yaml  amsterdam_cropped_1056.yaml  amsterdam_cropped_106.yaml  amsterdam_cropped_108.yaml  amsterdam_cropped_109.yaml  amsterdam_cropped_111.yaml  amsterdam_cropped_112.yaml  amsterdam_cropped_113.yaml  amsterdam_cropped_1136.yaml  amsterdam_cropped_1137.yaml  amsterdam_cropped_114.yaml  amsterdam_cropped_1142.yaml  amsterdam_cropped_1144.yaml  amsterdam_cropped_115.yaml  amsterdam_cropped_1159.yaml  amsterdam_cropped_116.yaml  amsterdam_cropped_1163.yaml  amsterdam_cropped_1164.yaml  amsterdam_cropped_1165.yaml  amsterdam_cropped_1166.yaml  amsterdam_cropped_1167.yaml  amsterdam_cropped_1168.yaml  amsterdam_cropped_117.yaml  amsterdam_cropped_1170.yaml  amsterdam_cropped_1171.yaml  amsterdam_cropped_1172.yaml  amsterdam_cropped_1173.yaml  amsterdam_cropped_1175.yaml  amsterdam_cropped_1176.yaml  amsterdam_cropped_1177.yaml  amsterdam_cropped_1178.yaml  amsterdam_cropped_1179.yaml  amsterdam_cropped_118.yaml  (+317 more)
launch/: custom_map_cropper.launch  custom_map_cropper_debug.launch  map_cropper.launch  passive_map_cropper.launch
scripts/: coordinate_system.py  coordinate_test.py  croppernode.py  image_box.py  image_cropper.py  image_cropper_node.py  image_cropper_service.py  map_cropper_node_old.py  map_image_coordinate_system.py  (+9 more)
(+3 files in other folders)
