<?xml version="1.0"?>
<package>

  <name>nautonomous_map_cropper</name>
  <version>0.0.0</version>
  <description>The nautonomous_map_cropper package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nautonomous_map_msgs</build_depend>
  <build_depend>nautonomous_configuration</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nautonomous_map_msgs</run_depend>
  <run_depend>nautonomous_configuration</run_depend>

</package>
